# evolve_pro_demo

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  app.py  pyproject.toml  run_gui.sh
biogui/: app.py
biogui/utils/: alphafold3_postprocess.sh  esm3_utils.py  evolvepro_utils.py  evolvepro_utils_v2.py  gnn_utils.py  gradio_utils.py
biogui/utils/ours_model/: dataset.py  inference.py  model.py  utils.py
